--- a/KZLinkedConsole/Info.plist
+++ b/KZLinkedConsole/Info.plist
@@ -38,6 +38,7 @@
 		<string>7265231C-39B4-402C-89E1-16167C4CC990</string>
 		<string>F41BD31E-2683-44B8-AE7F-5F09E919790E</string>
 		<string>E71C2CFE-BFD8-4044-8F06-00AE685A406C</string>
+		<string>DA4FDFD8-C509-4D8B-8B55-84A7B66AE701</string>
 	</array>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
